# museeks

./: .babelrc  .bowerrc  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .lesshintrc  .npmrc  .oxfmtrc.json  .oxlintrc.json  .pnp.cjs  .pnp.loader.mjs  .prettierignore  .prettierrc  .sasslintrc  .stylelintrc  .travis.yml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  appveyor.yml  biome.json  bower.json  build.js  bun.lockb  codeql-analysis.yml  crowdin.yml  electron-builder.yml  electron.vite.config.ts  esbuild.mjs  forge.config.js  gulpfile.js  index.html  lefthook.yml  (+24 more)
.circleci/: config.yml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql-analysis.yml  playwright.yml  qa.yml
dist_esbuild/: app.html
locales/: en.json
release/: .gitignore  flatpak-builder.yaml  flatpak.metainfo.xml  io.museeks.app.yaml
scripts/: checksum.sh  flatpak.sh  gen.sh  package.sh  release.sh
src/: App.safetest.tsx  app.html  global.css  index.html  main.tsx  routeTree.gen.ts  routes.ts  routes.tsx  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  flatpak.metainfo.xml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/01-initial-setup/: up.sql
src-tauri/release/: flatpak.exceptions.json  flatpak.metainfo.xml  io.museeks.app.yaml  template.desktop
src-tauri/src/: constants.rs  main.rs
src-tauri/src/commands/: mod.rs  window.rs
src-tauri/src/libs/: database.rs  error.rs  events.rs  file_associations.rs  init.rs  migrations.rs  mod.rs  playlist.rs  track.rs  utils.rs
src-tauri/src/libs/tests/: database_tests.rs  track_test.rs
src-tauri/src/migrations/: 01_create_tables.sql  02_add_album_artist_column.sql  03_add_is_compilation_column.sql  04_add_album_artist_sort_columns.sql  04_add_sort_columns.sql  04_add_track_sort_columns.sql
src-tauri/src/plugins/: app_close.rs  app_menu.rs  config.rs  cover.rs  database.rs  db.rs  debug.rs  default_view.rs  file_associations.rs  lastfm.rs  macos.rs  menu.rs  mod.rs  mpris.rs  shell_extension.rs  sleepblocker.rs  stream_server.rs  theme.rs
src/__tests__/: e2e-helpers.tsx  library.test-e2e.tsx  player.test-e2e.tsx  playlists.test-e2e.tsx  test-helpers.tsx  translations.test-e2e.tsx  vitest-env.d.ts
src/api/: LibraryAPI.ts  PlaylistsAPI.ts  SettingsAPI.ts
src/components/: AppEvents.tsx  AudioOutputSelect.tsx  ButtonRepeat.tsx  ButtonShuffle.tsx  ButtonShuffleRepeat.module.css  Cover.module.css  Cover.tsx  DropzoneImport.module.css  DropzoneImport.tsx  Footer.module.css  Footer.tsx  FooterContent.tsx  GlobalErrorBoundary.tsx  GlobalErrors.tsx  GlobalKeyBindings.tsx  Header.module.css  Header.tsx  HeaderContent.tsx  IPCNavigationEvents.tsx  IPCPlayerEvents.tsx  Icon.module.css  Icon.tsx  LibraryEvents.tsx  MediaSessionEvents.tsx  Navigation.tsx  PlayerControls.module.css  PlayerControls.tsx  PlayerEvents.tsx  PlayingBar.module.css  PlayingBar.tsx  PlayingBarInfo.module.css  PlayingBarInfo.tsx  PlayingIndicator.module.css  PlayingIndicator.tsx  ProgressBar.module.css  ProgressBar.tsx  Queue.tsx  QueueEmpty.module.css  QueueEmpty.tsx  QueueList.module.css  (+40 more)
src/constants/: sort-orders.ts
src/css/: bootstrap-sharper.css  main.css  player-font.css
src/electron/: config.js  database.js  index.js  integration.js  ipc.js  main.js  peer-discovery.js  power-monitor.js  tray.js
src/elements/: Button.module.css  Button.tsx  ButtonIcon.module.css  ButtonIcon.tsx  DefinitionList.tsx  ExternalButton.tsx  ExternalLink.tsx  Flexbox.module.css  Flexbox.tsx  Heart.tsx  Link.module.css  Link.tsx  List.module.css  List.tsx  Scrollable.module.css  Scrollable.tsx  Separator.module.css  Separator.tsx  SettingsNav.module.css  SettingsNav.tsx  Toast.tsx  View.module.css  View.tsx  ViewMessage.module.css  ViewMessage.tsx
src/fonts/: player-font.eot
src/hooks/: useAllTracks.ts  useCover.ts  useCurrentViewTracks.ts  useDebounce.ts  useDnDSensors.ts  useFilteredTracks.ts  useFocusedAlbum.ts  useFormattedDuration.ts  useGlobalTrackListStatus.ts  useInvalidate.ts  useOpener.ts  usePlayer.ts  usePlayingTrack.ts  usePlayingTrackCurrentTime.ts  usePlayingTrackID.ts  useScrollRestoration.ts  useViewStatus.ts
src/js/: DOM.js  alerts.js  app.js  default.config.json  functions.js  init.js  library.js  main.js  routes.js  store.js
src/lib/: bridge-config.ts  bridge-database.ts  bridge-lastfm.ts  bridge-mpris.ts  bridge-settings.ts  config.ts  cover.ts  database.ts  i18n.ts  icons.ts  ipc-channels.ts  library.ts  localization.ts  player.ts  queries.ts  query.ts  queue-origin.ts  route-tree.ts  route-tree.tsx  router.ts  scrobbler.ts  scroll-restoration.ts  settings.ts  sort-orders.ts  store.ts  themes.ts  toast-manager.ts  typeguards.ts  utils-events.ts  utils-id3.ts  utils-library.ts  utils-list.ts  utils-player.ts  utils.ts  wdyr.ts  web-audio-element.ts
src/main/: entrypoint.main.ts  entrypoint.ts  main.js  main.ts  tsconfig.json  utils.js  utils.ts
src/main-process/: config.js  constants.js  integration.js  ipc.js  library.js  main.js  network-discovery.js  peer-discovery.js  power-monitor.js  store.js  tray.js  utils.js
src/preload/: db.ts  entrypoint.preload.ts  entrypoint.ts  main.ts  tsconfig.json
src/renderer/: App.module.css  App.tsx  Root.tsx  Router.tsx  app.html  database.js  entrypoint.renderer.tsx  entrypoint.tsx  index.html  main.js  main.tsx  tsconfig.json
src/routes/: Root.tsx  ViewArtistDetails.module.css  ViewSettings.tsx  ViewSettingsAudio.tsx  ViewSettingsLibrary.tsx  ViewTrackDetails.tsx  __root.module.css  __root.tsx  albums.$albumID.tsx  albums.tsx  artist-details.tsx  artists.$artistID.tsx  artists.presets.compilations.tsx  artists.tsx  index.tsx  library.tsx  playlist-details.tsx  playlists.$playlistID.tsx  playlists.tsx  settings-about.tsx  settings-audio.tsx  settings-library.tsx  settings-ui.tsx  settings._layout.tsx  (+14 more)
tests/: example.spec.ts
(+1037 files in other folders)
