# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "museeks"
version = "0.20.9"
description = "A simple, clean and cross-platform music player"
authors = ["Pierre de la Martinière <pierre.de.la.martiniere@gmail.com>"]
license = "MIT"
repository = "https://github.com/martpie/museeks"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = ["codegen"] }

[dependencies]
tauri = { version = "2.5.1", features = [
    "protocol-asset",
    "image-png",
    "devtools",
] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
tauri-plugin-log = { version = "2.4.0", features = ["colored"] }
tauri-plugin-notification = "2.2.2"
tauri-plugin-opener = "2.2.7"
tauri-plugin-os = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-window-state = "2.2.2"

# non-Tauri dependencies
anyhow = "1.0.98"
base64 = "0.22.1"
dirs = "6.0.0"
futures = "0.3.31"
home-config = { version = "0.6.0", features = ["toml"] }
indexmap = "2.9.0"
itertools = "0.14.0"
log = "0.4.27"
lofty = "0.22.4"
m3u = "1.0.0"
memoize = "0.5.1"
nosleep = "0.2.1"
pathdiff = "0.2.3"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
ts-rs = "10.1.0"
uuid = { version = "1.17.0", features = ["v3", "v4", "fast-rng"] }
walkdir = "2.5.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
